<resources>
    <string name="app_name">Hackathon1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="password">Password</string>
</resources>